--- a/README
+++ b/README
@@ -1,10 +1,11 @@
-#CVS (Comma Value Seperated)
+CVS (Comma Value Seperated)
+=============
 
-##Handy CVS text datafiles for developers whom need to seed picklists, databases, wordlists, etc.##
+Handy CVS text datafiles for developers whom need to seed picklists, databases, wordlists, etc.
 
 * tz_database.cvs http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
-###Yes this stuff IS open-source###
+Yes this stuff IS open-source
 https://www.eff.org/cases/astrolabe-v-olson
 
-###Fork and add some others and I'll merge em' in###
+Fork and add some others and I'll merge em' in
